specify image hash

--- a/nostrudel/docker-compose.yml
+++ b/nostrudel/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   web:
-    image: ghcr.io/hzrd149/nostrudel:0.37.1
+    image: ghcr.io/hzrd149/nostrudel:0.37.1@sha256:a4ec18ec14f97818a494036d753a1a225f897f28d2c31272968c4488af803a2b
     restart: on-failure
     stop_grace_period: 1m
     init: true
