update to audiobookshelf 2.6.0

--- a/audiobookshelf/umbrel-app.yml
+++ b/audiobookshelf/umbrel-app.yml
@@ -3,7 +3,7 @@ id: audiobookshelf
 name: Audiobookshelf
 tagline: Audiobook and podcast server
 category: media
-version: "2.5.0"
+version: "2.6.0"
 port: 13378
 description: >-
   Features:
@@ -61,6 +61,24 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This release brings audiobookshelf from version 2.2.22 to version 2.5.0. Full release notes can be found at https://github.com/advplyr/audiobookshelf/releases
+  This release brings audiobookshelf from version 2.5.0 to 2.6.0. 
+
+
+
+  Added
+
+  - SSO via OpenID Connect authentication
+
+  - Simple API caching for /libraries* requests
+
+  - NFO files as book metadata source
+
+  - Czech translations
+
+  - Swedish translations
+
+
+  
+  Full release notes can be found at https://github.com/advplyr/audiobookshelf/releases
 submitter: Jasper
 submission: https://github.com/getumbrel/umbrel-apps/pull/302
