--- a/sabnzbd/umbrel-app.yml
+++ b/sabnzbd/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: sabnzbd
 category: networking
 name: SABnzbd
-version: "4.1.0"
+version: "4.1.0-hotfix1"
 tagline: The automated Usenet download tool
 description: >-
   SABnzbd makes Usenet as simple and streamlined as possible by automating everything we can. All you have to do is add an .nzb.
@@ -16,9 +16,9 @@ description: >-
   🛠️ SET-UP INSTRUCTIONS 🛠️
 
 
-  1. Set the Downloads Folder: During the quick-start wizard, you'll see default download directories ('/config/Downloads/complete' and '/config/Downloads/incomplete'). Please use these as your download folders.
-  These directories are pre-configured to map to the main 'downloads' folder on your Umbrel device. This means any files downloaded by SABnzbd will be automatically saved in the 'downloads' folder on your Umbrel device.
-  To access these downloaded files, you can use the File Explorer app, which is available in the Umbrel App Store.
+  1. Set the Downloads Folder: During the quick-start wizard, you'll see default download directories ('/config/Downloads/complete' and '/config/Downloads/incomplete'). You will need to change these to 
+  `downloads/complete` and `downloads/incomplete` as shown in the second gallery image above.
+  These directories are pre-configured to map to the main 'downloads' folder on your Umbrel device and to also work seamlessly with other apps like Sonarr and Radarr.
 
 
   2. Integrating with Other Applications: If you want to integrate SABnzbd with other applications such as Sonarr or Radarr, you'll need to use the IP address of your Umbrel device as the 'Host' and use 9876 as the 'Port'.
@@ -29,7 +29,24 @@ dependencies: []
 repo: https://github.com/sabnzbd/sabnzbd
 support: https://forums.sabnzbd.org/
 port: 9876
-releaseNotes: ""
+releaseNotes: >-
+  This is a hotfix release for SABnzbd 4.1.0 on Umbrel. It makes it easier to configure SABnzbd with apps like Sonarr and Radarr.
+  
+
+  🚨 If you are already running SABnzbd 4.1.0 on Umbrel, please update your app and then follow these steps to re-configure your downloads folder path.
+  You may see errors in the UI when first opening SABnzbd after updating. This is expected and will be fixed after following these steps.
+
+
+  1. In the SABnzbd app, navigate to Settings > Folders.
+
+
+  2. Change the 'Temporary Download Folder' to `downloads/incomplete` and the 'Completed Download Folder' to `downloads/complete`.
+
+
+  3. Click 'Save Changes'.
+
+
+  You are now set!
 permissions:
   - STORAGE_DOWNLOADS
 gallery:
