--- a/sabnzbd/umbrel-app.yml
+++ b/sabnzbd/umbrel-app.yml
@@ -17,7 +17,7 @@ description: >-
 
 
   1. Set the Downloads Folder: During the quick-start wizard, you'll see default download directories ('/config/Downloads/complete' and '/config/Downloads/incomplete'). You will need to change these to 
-  `downloads/complete` and `downloads/incomplete` as shown in the second gallery image above.
+  `downloads/complete` and `downloads/incomplete` as shown in the second gallery image above. You can change these by navigating to Settings > Folders in the SABnzbd app.
   These directories are pre-configured to map to the main 'downloads' folder on your Umbrel device and to also work seamlessly with other apps like Sonarr and Radarr.
 
 
@@ -34,7 +34,7 @@ releaseNotes: >-
   
 
   🚨 If you are already running SABnzbd 4.1.0 on Umbrel, please update your app and then follow these steps to re-configure your downloads folder path.
-  You may see errors in the UI when first opening SABnzbd after updating. This is expected and will be fixed after following these steps.
+  You may see errors in the UI when first opening SABnzbd after updating. No data has been lost. This is expected and will be fixed after following these steps.
 
 
   1. In the SABnzbd app, navigate to Settings > Folders.
