--- a/sabnzbd/docker-compose.yml
+++ b/sabnzbd/docker-compose.yml
@@ -13,7 +13,11 @@ services:
     stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
-      - ${UMBREL_ROOT}/data/storage/downloads:/config/Downloads
+      # sabnzdb offers no way to change the default download directory via environment variables
+      # and the sabnzbd.ini is not generated until after going through the setup wizard, which automatically sets the download directory to /config/Downloads
+      # users then need to manually change the download directory to /downloads in Settings > Folders
+      # This must be done in order to integrate easily properly with other apps like Sonarr and Radarr
+      - ${UMBREL_ROOT}/data/storage/downloads:/downloads
     environment:
       - PUID=1000
       - PGID=1000
