--- a/metube/umbrel-app.yml
+++ b/metube/umbrel-app.yml
@@ -5,14 +5,14 @@ name: MeTube
 version: "2023.11.16"
 tagline: Download videos from YouTube
 description: >-
-  Download videos from YouTube (and dozens of other sites) directly to you Umbrel.
+  Download videos from YouTube (and dozens of other sites) directly to your Umbrel.
 developer: Alex Shnitman
 dependencies: []
 repo: https://github.com/alexta69/metube
 port: 3700
 releaseNotes: ""
 support: https://github.com/alexta69/metube/issues
-website: https://github.com/alexta69/metube/pkgs/container/metube
+website: https://github.com/alexta69/metube
 gallery:
   - 1.jpg
   - 2.jpg
