tweak release notes

--- a/nextcloud/umbrel-app.yml
+++ b/nextcloud/umbrel-app.yml
@@ -25,9 +25,10 @@ description: >-
 
   Note: After logging in to Nextcloud please change the password to something secure before sharing the address with anyone.
 releaseNotes: >-
-  This update takes Nextcloud from v25.0.1 to v28.0.0.
+  🚨 This is a major update of the Nextcloud app on Umbrel! It may take several minutes to install the update, so please be patient and don't restart your Umbrel during this process.
 
-  - Full changelog can be found here: https://nextcloud.com/changelog/
+
+  Full release details for all Nextcloud versions can be found at https://nextcloud.com/changelog/
 developer: Nextcloud GmbH
 website: https://nextcloud.com
 dependencies: []
