--- a/nextcloud/umbrel-app.yml
+++ b/nextcloud/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: nextcloud
 category: files
 name: Nextcloud
-version: "25.0.1"
+version: "28.0.0"
 tagline: Productivity platform that keeps you in control
 description: >-
   Nextcloud puts your data at your fingertips, under your control.
@@ -25,10 +25,10 @@ description: >-
 
   Note: After logging in to Nextcloud please change the password to something secure before sharing the address with anyone.
 releaseNotes: >-
-  ⚠️ This update may take a while. It migrates Nextcloud from v22 to v25 and can take several minutes depending on your Internet connection speed, your server hardware, and how many files you have stored in Nextcloud.
+  🚨 This is a major update of the Nextcloud app on Umbrel! It may take several minutes to install the update, so please be patient and don't restart your Umbrel during this process.
 
 
-  - Full changelog can be found here: https://nextcloud.com/changelog/
+  Full release details for all Nextcloud versions can be found at https://nextcloud.com/changelog/
 developer: Nextcloud GmbH
 website: https://nextcloud.com
 dependencies: []
