--- a/autobrr/umbrel-app.yml
+++ b/autobrr/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: autobrr
 category: media
 name: autobrr
-version: "1.33.0"
+version: "1.34.1"
 tagline: Modern, easy to use download automation for torrents and usenet
 description: >-
   autobrr is the modern download automation tool for torrents and usenet.
@@ -17,7 +17,21 @@ description: >-
 
   It then sends that torrent file to a download client of your choice. A download client can be anything from qBittorrent, Deluge, Radarr, Sonarr, watch folder, and more.
 releaseNotes: >-
-  This is a minor release that includes bug fixes and performance improvements. Full release notes are available at https://github.com/autobrr/autobrr/releases.
+  This update takes autobrr from version 1.33.0 to 1.34.1, and includes the following changes:
+
+
+  -  ui overhaul 
+
+  - log connection errors
+
+  - support optional bot mode
+
+  - verify external autobrr.com URLs
+
+  - and many more...
+  
+  
+  Full release notes are available at https://github.com/autobrr/autobrr/releases.
 developer: autobrr
 website: https://autobrr.com/
 dependencies: []
