--- a/public-pool/docker-compose.yml
+++ b/public-pool/docker-compose.yml
@@ -10,4 +10,4 @@ services:
     image: ghcr.io/sethforprivacy/public-pool-ui:latest
     restart: unless-stopped
     environment:
-      - DOMAIN=pool.sethforprivacy.com
+      - DOMAIN=$DEVICE_DOMAIN_NAME
