--- a/public-pool/docker-compose.yml
+++ b/public-pool/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     ports:
       - "0.0.0.0:3333:3333/tcp"
     volumes:
-      - "${APP_BITCOIN_DATA_DIR}:/data/public-pool-db:/public-pool/DB"
-      - "${APP_BITCOIN_DATA_DIR}:/data/pool.env:/public-pool/.env:ro"
+      - "${APP_DATA_DIR}:/data/public-pool-db:/public-pool/DB"
+      - "${APP_DATA_DIR}:/data/pool.env:/public-pool/.env:ro"
     environment:
       - NODE_ENV=production
       - BITCOIN_RPC_URL=http://${APP_BITCOIN_NODE_IP}
