--- a/public-pool/docker-compose.yml
+++ b/public-pool/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: public-pool_web_1
       APP_PORT: 80
+      PROXY_AUTH_WHITELIST: "/api/*"
   
   web:
     image: ghcr.io/sethforprivacy/public-pool-ui:latest
