--- a/public-pool/umbrel-app.yml
+++ b/public-pool/umbrel-app.yml
@@ -2,36 +2,19 @@ manifestVersion: 1.1
 id: public-pool
 category: bitcoin
 name: Public Pool
-version: "25.1"
-tagline: Run your personal node powered by Bitcoin Core
+version: "4bb00f2"
+tagline: Fully Open Source Solo Bitcoin Mining Pool
 description: >-
-  Run your Bitcoin node and independently store and validate
-  every single Bitcoin transaction with it. Achieve unparalleled
-  privacy by connecting your wallet directly to your node to
-  ensure that your wallet company can’t spy on your transactions,
-  or worse — lie to you.
-
-
-  Plus, transacting with your own node also helps keep the entire
-  Bitcoin network decentralized; win-win!
-
-
-  With over 20 advanced settings, you can take control of your node
-  and customize it to your needs. Control how your node connects to
-  other nodes over Tor, clearnet, and I2P, adjust your daily upload
-  limit, set the maximum mempool size, fine-tune its performance,
-  and much more.
+  Fully Open Source Solo Bitcoin Mining Pool
 
 
   Don't trust. Verify. On steroids.
-
-
-  An official app from Umbrel.
-developer: Umbrel
-website: https://umbrel.com
-dependencies: []
-repo: https://github.com/getumbrel/umbrel-bitcoin
-support: https://community.getumbrel.com/c/bitcoin-and-lightning
+developer: benjamin-wilson
+website: https://web.public-pool.io/#/
+dependencies:
+  - bitcoin
+repo: https://github.com/benjamin-wilson/public-pool
+support: https://github.com/benjamin-wilson/public-pool/issues
 port: 2019
 gallery:
   - 1.jpg
@@ -41,26 +24,5 @@ gallery:
   - 5.jpg
 path: ""
 defaultPassword: ""
-releaseNotes: >-
-  This update brings Bitcoin Core 25.1, automatic 'settings.json' corruption detection and repair, along with several new advanced settings such as:
-
-
-  - Peer Settings: Customize your node's connections and interactions with network peers. For example, you can now adjust ban durations for misbehaving peers.
-
-
-  - Optimization: Fine-tune your node's performance and resource usage with new settings like maximum mempool size.
-
-
-  - RPC and REST: Configure access to your node's RPC and REST APIs.
-
-
-  - and more!
-
-
-  ⚠️ 'Peer Bloom Filters' is now disabled by default for all users, to enhance privacy and lower the risk of denial-of-serice (DoS attacks). You can read more at https://github.com/getumbrel/umbrel/issues/1624.
-  If you are connecting older wallet clients that depend on the BIP37 protocol (eg. Bisq), you can enable 'Peer Bloom Filters' in Advanced Settings at the cost of reduced security.
-
-
-  Discover what's new in Bitcoin Core 25.1: https://github.com/bitcoin/bitcoin/blob/master/doc/release-notes/release-notes-25.1.md
-submitter: Umbrel
+submitter: smolgrrr
 submission: https://github.com/getumbrel/umbrel-apps/commit/576ecd2bef8d625abceed0f67ec9c487da9b2b1b
