Update Jellyfin to 10.8.13

--- a/jellyfin/umbrel-app.yml
+++ b/jellyfin/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: jellyfin
 category: media
 name: Jellyfin
-version: "10.8.11"
+version: "10.8.13"
 tagline: The Free Software Media System
 description: >-
   Jellyfin is the volunteer-built media solution that puts you in control of your media. Stream to any device from your own server, with no strings attached. Your media, your server, your way.
@@ -40,6 +40,9 @@ releaseNotes: >-
   
   This update is a hotfix release with no new features or major improvements.
 
+
+  - NOTICE: The customizable FFmpeg binary path in the WebUI/API has been REMOVED for security reasons.
+  
 
   Full release notes can be found here: https://github.com/jellyfin/jellyfin/releases
 torOnly: false
