--- a/public-pool/docker-compose.yml
+++ b/public-pool/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     environment:
       APP_HOST: public-pool_web_1
       APP_PORT: 80
-      PROXY_AUTH_WHITELIST: "/api/*"
-  
+      PROXY_AUTH_ADD: "false"
+      
   web:
     image: sethforprivacy/public-pool-ui:db286e5@sha256:1a411ed59cdf3a3bddbfc2b4b90b413ad7dbbd6787543aff3c4ae4ffb260b80e
     restart: unless-stopped
