--- a/public-pool/docker-compose.yml
+++ b/public-pool/docker-compose.yml
@@ -3,10 +3,17 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: public-pool_web_1
+      APP_HOST: public-pool_nginx_1
       APP_PORT: 80
-      PROXY_AUTH_ADD: "false"
-      
+      PROXY_AUTH_WHITELIST: "/api/*"
+
+  nginx:
+    image: nginx:1.21-alpine@sha256:686aac2769fd6e7bab67663fd38750c135b72d993d0bb0a942ab02ef647fc9c3
+    init: true
+    restart: on-failure
+    volumes:
+      - ${APP_DATA_DIR}/config/nginx.conf:/etc/nginx/conf.d/nginx.conf:ro
+
   web:
     image: sethforprivacy/public-pool-ui:db286e5@sha256:1a411ed59cdf3a3bddbfc2b4b90b413ad7dbbd6787543aff3c4ae4ffb260b80e
     restart: unless-stopped
