--- a/public-pool/docker-compose.yml
+++ b/public-pool/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     init: true
     restart: on-failure
     volumes:
-      - ${APP_DATA_DIR}/config/nginx.conf:/etc/nginx/conf.d/nginx.conf:ro
+      - ${APP_DATA_DIR}/config/nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
   web:
     image: sethforprivacy/public-pool-ui:db286e5@sha256:1a411ed59cdf3a3bddbfc2b4b90b413ad7dbbd6787543aff3c4ae4ffb260b80e
