--- a/public-pool/config/nginx.conf
+++ b/public-pool/config/nginx.conf
@@ -2,10 +2,10 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://public-pool_web_1:80;
+        proxy_pass http://public-pool_web_1:2019;
     }
 
     location /api {
-        proxy_pass http://public-pool_web_1:3334;
+        proxy_pass http://public-pool_server_1:3334;
     }
 }
