add multi-arch digest to pgvecto-rs image

--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -64,7 +64,7 @@ services:
       - ${APP_DATA_DIR}/data/redis:/data
 
   postgres:
-    image: tensorchord/pgvecto-rs:pg14-v0.1.11
+    image: tensorchord/pgvecto-rs:pg14-v0.1.11@sha256:0335a1a22f8c5dd1b697f14f079934f5152eaaa216c09b61e293be285491f8ee
     user: "1000:1000"
     environment:
       <<: *env
