add iOS live photos breaking change warning to release notes

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -47,8 +47,8 @@ description: >-
 releaseNotes: >-
   ⚠️ Your mobile app must be on at least version 1.91.0 to work with this release of Immich.
 
-  
-  Breaking change. Dropping typesense.
+  🚨 iOS Live Photos uploaded after v1.89.0 that are not linked need to be deleted and re-uploaded from the mobile app.
+  This is a one-time action, and future live photos uploaded from the mobile app will be properly linked together.
 
 
   Full release notes are found at: https://github.com/immich-app/immich/releases
