Update Immich to 1.91.4 (#912)
Co-authored-by: smolgrrr <smolgrrr@protonmail.com>
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.88.2"
+version: "v1.91.4"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -45,11 +45,11 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >-
-  ⚠️ Your mobile app must be on at least version 1.88.0 to work with this release of Immich.
+  ⚠️ Your mobile app must be on at least version 1.91.0 to work with this release of Immich.
 
-  
-  In this release we have simplified how Immich is deployed, beautified our app interface with a new font, namely Overpass,
-  and finally released version 2 of our command line interface (CLI), which has been in the works for the past six months.
+
+  🚨 iOS Live Photos uploaded after v1.89.0 that are not linked need to be deleted and re-uploaded from the mobile app.
+  This is a one-time action, and future live photos uploaded from the mobile app will be properly linked together.
 
 
   Full release notes are found at: https://github.com/immich-app/immich/releases
