--- a/invoice-ninja/docker-compose.yml
+++ b/invoice-ninja/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - ${APP_DATA_DIR}/data/storage:/var/www/app/storage:rw,delegated
     environment:
       APP_URL: "http://${APP_DOMAIN}"
-      APP_KEY: "${APP_KEY:-unset}"
+      APP_KEY: $APP_KEY
       REQUIRE_HTTPS: "false"
       DB_HOST: invoice-ninja_db_1
       DB_DATABASE: invoiceninja
