--- a/public-pool/docker-compose.yml
+++ b/public-pool/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_WHITELIST: "/api/*"
 
   traefik:
-    image: "traefik:latest"
+    image: traefik:v2.10.7@sha256:c5181ddf303f1ccfd4bd6d1d9c4867b0500efb6089a0f9ccb16612438f6e934f
     restart: unless-stopped
     command:
       - "--accesslog=false"
