Clean up tag line

--- a/monero/umbrel-app.yml
+++ b/monero/umbrel-app.yml
@@ -3,7 +3,7 @@ id: monero
 category: finance
 name: Monero Node
 version: "0.18.2.2"
-tagline: Run a monero node.
+tagline: Run a monero node
 description: >-
   Run your monero node and independently store and validate every single Monero transaction with it.
   This is a full node that will download the entire Monero blockchain and store it on your Umbrel. 
