--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: thunderhub
 category: bitcoin
 name: ThunderHub
-version: "0.13.23"
+version: "0.13.29"
 tagline: Take full control of your Lightning node
 description: >-
   ThunderHub allows you to take full control of your Lightning node
@@ -28,15 +28,6 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  - Updated dependencies
-  
-  - Extra logs
-
-  - Changes to Forwards
-
-  - Bugfixes for balance push and undefined type
-  
-
-  Full release notes can be found at https://github.com/apotdevin/thunderhub/releases
+  This update brings Thunderhub from version 0.13.23 to 0.13.29. Full release notes can be found at https://github.com/apotdevin/thunderhub/releases
 submitter: Anthony Potdevin
 submission: https://github.com/getumbrel/umbrel/pull/343
