--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -34,15 +34,10 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  This release includes various bug fixes and improvements, as well as the following new features:
-  
-  - Scan QR codes for destination/address when claiming funds.
-
-  - Ability to delete a user by email
-
-  - New checkout settings
+  🚨 If you are using plugins, you will most likely find them disabled after this update, because new versions compatible with BTCPay Server v1.12 are required. Please see the "Manage Plugins" section once updated.
 
 
+  This udpate brings BTCPay Server to version 1.12.3, and includes various bug fixes, improvements, and new features.
   Full release notes can be found at https://github.com/btcpayserver/btcpayserver/releases/tag/v1.11.7.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
