Update BTCPay Server to v1.12.3 (#918)

--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: bitcoin
 name: BTCPay Server
-version: "1.11.7"
+version: "1.12.3"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -34,15 +34,10 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  This release includes various bug fixes and improvements, as well as the following new features:
-  
-  - Scan QR codes for destination/address when claiming funds.
-
-  - Ability to delete a user by email
-
-  - New checkout settings
+  🚨 If you are using plugins, you will most likely find them disabled after this update, because new versions compatible with BTCPay Server v1.12 are required. Please see the "Manage Plugins" section once updated.
 
 
+  This update brings BTCPay Server to version 1.12.3, and includes various bug fixes, improvements, and new features.
   Full release notes can be found at https://github.com/btcpayserver/btcpayserver/releases/tag/v1.11.7.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
