--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lnbits
 category: bitcoin
 name: LNbits
-version: "0.11.1"
+version: "0.11.3"
 tagline: Multi-user wallet management system
 description: >-
   LNbits is a simple multi-user and account system for Lightning
@@ -41,21 +41,20 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes:  >-
-  This release introduces the LNbits node manager which allows you to manage your Lightning channels directly from within your LNbits. 
-  The node manager works with Core Lightning and LND and we plan to add support for more Lightning backends soon. You can activate the node manager in your LNbits admin panel, which will allow you to:
-
-  - Manage your Lightning channels directly from within your LNbits.
-
-  - View the transaction history on your node to see a list of all incoming and outgoing payments
-
-  - Share a public node page with others who want to open a channel to your node.
+  This release updates LNbits to 0.11.3, and includes various bug fixes, improvements, and new features.
 
 
-  We have upgraded the API framework that we use in LNbits. 
-  That means that most extensions need to be update to work with this release. 
-  Please log in as an admin user and update your extensions to the latest version after upgrading your LNbits.
+  - New service fee settings that lets you earn a transaction fee for all internal or external transaction on an LNbits instance.
 
-  
+  - New funding source: Alby wallet
+
+  - Fiat balance in wallet 
+
+  - LND REST bug fixes
+
+  - and more!
+
+
   📄 Full Release Notes and detailed information is available at: https://github.com/lnbits/lnbits/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/372
