Change elements to testnet

--- a/elements/docker-compose.yml
+++ b/elements/docker-compose.yml
@@ -16,13 +16,14 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/home/elements/.elements
     command:
+      - -chain=liquidtestnet
       - -listen=0
       - -txindex=1
       - -trim_headers=1
       # Current Elements Core requires >8GB of RAM to verify confidential proofs during IBD
       # We skip historical block verification for now, as we don't have a way to set the memory limit
-      - -assumevalid=546a756e0238e8c5c2c8bee43f0395740519f96aaee5994d05ef6569ce2d0821
-      - -validatepegin=1
+      - #-assumevalid=546a756e0238e8c5c2c8bee43f0395740519f96aaee5994d05ef6569ce2d0821
+      #- -validatepegin=1
       - -fallbackfee=0.000001
       # Attach to Bitcoin network
       - -mainchainrpchost=$APP_BITCOIN_NODE_IP
