--- a/elements/docker-compose.yml
+++ b/elements/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       # Current Elements Core requires >8GB of RAM to verify confidential proofs during IBD
       # We skip historical block verification for now, as we don't have a way to set the memory limit
       - #-assumevalid=546a756e0238e8c5c2c8bee43f0395740519f96aaee5994d05ef6569ce2d0821
-      #- -validatepegin=1
+      - -validatepegin=1
       - -fallbackfee=0.000001
       # Attach to Bitcoin network
       - -mainchainrpchost=$APP_BITCOIN_NODE_IP
