--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - -lnd.macaroonpath=${APP_LIGHTNING_NODE_DATA_DIR}/data/chain/bitcoin/${APP_PEERSWAP_CHAIN}/admin.macaroon
       # Elements RPC
       - -elementsd.rpcuser=elements
-      - -elementsd.rpcpass=$APP_PASSWORD
+      - -elementsd.rpcpass=$APP_ELEMENTS_NODE_RPC_PASS
       - -elementsd.rpcport=$APP_ELEMENTS_NODE_RPC_PORT
       - -elementsd.rpchost=elements_node_1
 
