--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -21,12 +21,12 @@ services:
       - -lnd.macaroonpath=${APP_LIGHTNING_NODE_DATA_DIR}/data/chain/bitcoin/${APP_PEERSWAP_CHAIN}/admin.macaroon
       # Elements RPC
       - -elementsd.rpcuser=elements
-      - -elementsd.rpcpass=$APP_ELEMENTS_NODE_RPC_PASS
+      - -elementsd.rpcpass=$APP_ELEMENTS_RPC_PASS
       - -elementsd.rpcport=$APP_ELEMENTS_NODE_RPC_PORT
       - -elementsd.rpchost=elements_node_1
 
   web:
-    image: ghcr.io/impa10r/peerswapd:latest@sha256:ebeed891e46e0c990f5d0c5c78a4e39c336d9ce7afee90210f5f9956215bf7e3
+    image: ghcr.io/impa10r/peerswapd@sha256:ebeed891e46e0c990f5d0c5c78a4e39c336d9ce7afee90210f5f9956215bf7e3
     restart: on-failure
     stop_grace_period: 1m
     init: true
