--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: $APP_PEERSWAP_UI_PORT
 
   peerswapd:
-    image: ghcr.io/impa10r/peerswapd:v1.0.3@sha256:b20fe69ca3934f523803920fb9613f8f289780a0880016816dcadf57ec3aaae7
+    image: ghcr.io/impa10r/peerswapd@sha256:ebeed891e46e0c990f5d0c5c78a4e39c336d9ce7afee90210f5f9956215bf7e3
     restart: on-failure
     stop_grace_period: 1m
     ports:
@@ -26,7 +26,7 @@ services:
       - -elementsd.rpchost=elements_node_1
 
   web:
-    image: ghcr.io/impa10r/peerswapd@sha256:ebeed891e46e0c990f5d0c5c78a4e39c336d9ce7afee90210f5f9956215bf7e3
+    image: ghcr.io/impa10r/peerswap-web:v1.0.3@sha256:b20fe69ca3934f523803920fb9613f8f289780a0880016816dcadf57ec3aaae7
     restart: on-failure
     stop_grace_period: 1m
     init: true
