Add Elements password

--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - --lnd.macaroonpath=${APP_LIGHTNING_NODE_DATA_DIR}/data/chain/bitcoin/${APP_PEERSWAP_CHAIN}/admin.macaroon
       # Elements RPC
       - --elementsd.rpcuser=elements
-      - --elementsd.rpcpass=$APP_ELEMENTS_RPC_PASS
+      - --elementsd.rpcpass=49cf18cd3c32e6d2c600c9ea603e6b4ddfa4eefe52cc00722e5c040e2ac2ed1e ##### $APP_ELEMENTS_RPC_PASS
       - --elementsd.rpcport=$APP_ELEMENTS_NODE_RPC_PORT
       - --elementsd.rpchost=elements_node_1
 
