--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - --policyfile=/root/.peerswap/policy.conf
       - --datadir=/root/.peerswap
       - --loglevel=2                   # loglevel (1=Info, 2=Debug) (default: 2)
-      - --bitcoinswaps=true
+      - --bitcoinswaps                 # remove to disable
       # LND
       - --lnd.host=lightning_lnd_1
       - --lnd.tlscertpath=${APP_LIGHTNING_NODE_DATA_DIR}/tls.cert
