--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app_proxy:
     environment:
       APP_HOST: peerswap_web_1
-      APP_PORT: $APP_PEERSWAP_UI_PORT
+      APP_PORT: 8088
 
   peerswapd:
     image: ghcr.io/impa10r/peerswapd@sha256:ebeed891e46e0c990f5d0c5c78a4e39c336d9ce7afee90210f5f9956215bf7e3
