--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       APP_HOST: peerswap_web_1
       APP_PORT: 8088
 
-  peerswapd:
-    image: ghcr.io/impa10r/peerswapd@sha256:ebeed891e46e0c990f5d0c5c78a4e39c336d9ce7afee90210f5f9956215bf7e3
+  web:
+    image: ghcr.io/impa10r/peerswap-joint:v1.0.3@sha256:40055ef3b87cd429c7db437680f05053e35ba15fe5de2d8c70b083f5a9bd4a28
     restart: on-failure
     stop_grace_period: 1m
     ports:
@@ -31,17 +31,10 @@ services:
       - --elementsd.rpcpass=49cf18cd3c32e6d2c600c9ea603e6b4ddfa4eefe52cc00722e5c040e2ac2ed1e ##### $APP_ELEMENTS_RPC_PASS
       - --elementsd.rpcport=$APP_ELEMENTS_NODE_RPC_PORT
       - --elementsd.rpchost=elements_node_1
-
-  web:
-    image: ghcr.io/impa10r/peerswap-web:v1.0.3@sha256:40081129e8e45788dca86b80b1f09fdbfd953ef3ac5e7fabdc0db76e9281f418
-    restart: on-failure
-    stop_grace_period: 1m
-    init: true
-    depends_on:
-      - peerswapd
-    volumes:
-      - ${APP_DATA_DIR}/data:/root/.peerswap
-    environment:
+      - sh
+      - -c
+      - psweb
+  environment:
       RPC_PORT: $APP_PEERSWAP_RPC_PORT
       RPC_HOST: peerswap_peerswapd_1
       TESTNET: $APP_PEERSWAP_CHAIN
