--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -36,5 +36,5 @@ services:
       - psweb
   environment:
       RPC_PORT: $APP_PEERSWAP_RPC_PORT
-      RPC_HOST: peerswap_peerswapd_1
+      RPC_HOST: peerswap_web_1
       TESTNET: $APP_PEERSWAP_CHAIN
