--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -10,8 +10,12 @@ services:
     image: ghcr.io/impa10r/peerswap-joint:v1.0.3@sha256:40055ef3b87cd429c7db437680f05053e35ba15fe5de2d8c70b083f5a9bd4a28
     restart: on-failure
     stop_grace_period: 1m
-    ports:
-      - $APP_PEERSWAP_RPC_PORT:$APP_PEERSWAP_RPC_PORT # RPC
+    environment:
+      #RPC_PORT: $APP_PEERSWAP_RPC_PORT
+      #RPC_HOST: peerswap_web_1
+      TESTNET: $APP_PEERSWAP_CHAIN
+    #ports:
+    #  - $APP_PEERSWAP_RPC_PORT:$APP_PEERSWAP_RPC_PORT # RPC
     volumes:
       - ${APP_DATA_DIR}/data:/root/.peerswap
       - ${APP_LIGHTNING_NODE_DATA_DIR}:/root/.lnd:ro
@@ -34,7 +38,3 @@ services:
       - sh
       - -c
       - psweb
-    environment:
-      RPC_PORT: $APP_PEERSWAP_RPC_PORT
-      RPC_HOST: peerswap_web_1
-      TESTNET: $APP_PEERSWAP_CHAIN
