--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -20,8 +20,8 @@ services:
     command:
       - /bin/sh
       - -c
-      - psweb; 
-      - peerswapd
+      - /root/psweb; 
+      - /root/peerswapd
       # Application Options
       - --datadir=/root/.peerswap
       - --loglevel=2                   # loglevel (1=Info, 2=Debug) (default: 2)
