--- a/firefly-iii/docker-compose.yml
+++ b/firefly-iii/docker-compose.yml
@@ -45,4 +45,4 @@ services:
     depends_on:
       - server
     environment:
-      FIREFLY_III_URL=$DEVICE_DOMAIN_NAME
+      - FIREFLY_III_URL=$DEVICE_DOMAIN_NAME
