--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - --datadir=/root/.peerswap
       # LND
       - --lnd.host=${APP_LIGHTNING_NODE_IP}:${APP_LIGHTNING_NODE_GRPC_PORT}
-      - --lnd.macaroonpath=/root/.lnd/data/chain/bitcoin/${APP_PEERSWAP_CHAIN}/admin.macaroon
+      - --lnd.macaroonpath=/root/.lnd/data/chain/bitcoin/${APP_BITCOIN_NETWORK}/admin.macaroon
       # Elements RPC
       - --elementsd.rpcuser=elements
       - --elementsd.rpcpass=49cf18cd3c32e6d2c600c9ea603e6b4ddfa4eefe52cc00722e5c040e2ac2ed1e ##### $APP_ELEMENTS_RPC_PASS
