--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       RPC_PORT: $APP_PEERSWAP_RPC_PORT
       RPC_HOST: peerswap_web_1
       TESTNET: $APP_BITCOIN_NETWORK
-      LAUNCH_PEERSWAPD: true
+      LAUNCH_PEERSWAPD: "true"
     volumes:
       - ${APP_DATA_DIR}/data:/root/.peerswap
       - ${APP_LIGHTNING_NODE_DATA_DIR}:/root/.lnd:ro
