--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     image: ghcr.io/impa10r/peerswap-web:v1.0.3@sha256:8704771dccbf9bd81399364d92479d82b5259b733a04ca81d31d4fd307b0b590
     restart: on-failure
     stop_grace_period: 1m
-    environment:
+    ports:
+      - 42069:42069
       TESTNET: $APP_BITCOIN_NETWORK
       LAUNCH_PEERSWAPD: "true"
     volumes:
