--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     stop_grace_period: 1m
     ports:
       - 42069:42069
+    environment:
       TESTNET: $APP_BITCOIN_NETWORK
       LAUNCH_PEERSWAPD: "true"
     volumes:
