--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -7,11 +7,9 @@ services:
       APP_PORT: $APP_PEERSWAP_RPC_PORT
 
   web:
-    image: ghcr.io/impa10r/peerswap-web:v1.0.3@sha256:8704771dccbf9bd81399364d92479d82b5259b733a04ca81d31d4fd307b0b590
+    image: ghcr.io/impa10r/peerswap-web:v1.0.3@sha256:docker push ghcr.io/impa10r/peerswap-web:v1.0.3
     restart: on-failure
     stop_grace_period: 1m
-    ports:
-      - 42069:42069
     environment:
       TESTNET: $APP_BITCOIN_NETWORK
       LAUNCH_PEERSWAPD: "true"
