--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: $APP_PEERSWAP_RPC_PORT
 
   web:
-    image: ghcr.io/impa10r/peerswap-web:v1.0.3@sha256:sha256:7183da1962f6c25d9e3b3aea446dba427cafef54b880d0c13ee6d4e3b54cf6fc
+    image: ghcr.io/impa10r/peerswap-web:v1.0.3@sha256:7183da1962f6c25d9e3b3aea446dba427cafef54b880d0c13ee6d4e3b54cf6fc
     restart: on-failure
     stop_grace_period: 1m
     environment:
