--- a/peerswap/umbrel-app.yml
+++ b/peerswap/umbrel-app.yml
@@ -2,9 +2,13 @@ manifestVersion: 1
 id: peerswap
 category: bitcoin
 name: PeerSwap
-version: "1.0.3"
+version: "1.1.0"
 tagline: Balance your lightning channels with Liquid BTC
 description: PeerSwap enables Lightning Network nodes to balance their channels by facilitating atomic swaps with direct peers. PeerSwap enhances decentralization of the Lightning Network by enabling all nodes to be their own swap provider. No centralized coordinator, no 3rd party rent collector, and lowest cost channel balancing means small nodes can better compete with large nodes.
+
+  WARNING! Elements Core wallet has no seed phrase recovery!
+
+  Take care to backup wallet.dat after each liquid transaction, including all peer swaps. In case of a catastrophic failure of your SSD all L-BTC funds may be lost. On Umbrel, this file is located in /home/umbrel/umbrel/app-data/elements/data/liquidv1/wallets/peerswap folder. Run your node with with UPS. **DO NOT** uninstall Elements Core unless all liquid funds are spent or you have saved the wallet.dat file. **DO NOT** let this file get into wrong hands, as it is not passphrase protected. 
 developer: PeerSwap Project
 website: https://peerswap.dev
 dependencies:
@@ -12,13 +16,13 @@ dependencies:
   - elements
 repo: https://github.com/Impa10r/peerswap-web
 support: https://discord.com/invite/wpNv3PG8G2
-port: 8088
+port: 1984
 gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
 path: ""
 releaseNotes: >-
-  Umbrel integration is maintained by Vlad Goryachev
+  Initial release for Umbrel. Web UI and Umbrel integration are maintained by Vlad Goryachev.
 submitter: Vlad Goryachev
 submission: https://github.com/getumbrel/umbrel/pull/1189
