--- a/peerswap/umbrel-app.yml
+++ b/peerswap/umbrel-app.yml
@@ -25,4 +25,4 @@ path: ""
 releaseNotes: >-
   Initial release for Umbrel. Web UI and Umbrel integration are maintained by Vlad Goryachev.
 submitter: Vlad Goryachev
-submission: https://github.com/getumbrel/umbrel/pull/1189
+submission: 
