--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: tailscale
 category: networking
 name: Tailscale
-version: "v1.52.0"
+version: "v1.56.1"
 tagline: Zero config VPN to access your Umbrel from anywhere
 description: >-
   Tailscale is zero config VPN that creates a secure network between
@@ -28,28 +28,13 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: |
-  This release updates Tailscale from v1.48.1 to v1.52.0 which includes: 
+  This release updates Tailscale from v1.52.0 to v1.56.1 which includes: 
   
-  v1.50.0
-  - tailscale ping now sends an ICMP Ping code of 0.
-  - UPnP falls back to a permanent lease if a limited lease fails, some servers only support permanent.
-  - Adds support for Wikimedia DNS using DNS-over-HTTPS.
-  - Unhide tailscale update CLI command on most platforms.
-  - tailscale web updated to use React and be more awesome.
-  - Add --log-http option to tailscale debug portmap.
-  - tailscale netcheck now works even if the OS platform lacks CA certificates.
-
-  v1.52.0
-  - tailscale cert command renews in the background. The current certificate only displays if it has expired.
-  - tailscale status command displays a message about client updates when newer versions are available
-  - tailscale up command displays a message about client updates when newer versions are available
-  - Taildrop now resumes file transfers after partial transfers are interrupted
-  - Taildrop prevents file duplication
-  - Taildrop detects conflicting file transfers and only proceeds with one transfer
-  - Wake on LAN (WoL) is now supported for peer node wake-ups
-  - TCP DNS queries are speculatively started if UDP hasn’t responded quickly enough
-  - Truncated UDP DNS results are properly retried using TCP
-  - Go is updated to version 1.21.3
+  - improve responsiveness under load, especially with bidirectional traffic
+  - improve UPnP portmapping
+  - add tailscale whois subcommand to observe metadata associated with a Tailscale IP
+  - include tailnet name and profile ID in tailscale switch --list to disambiguate profiles with common login names
+  - and many more improvements/fixes..
 
   Full release notes and detailed information is available at https://github.com/tailscale/tailscale/releases
 submitter: Umbrel
