--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -28,6 +28,12 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  This update brings Thunderhub from version 0.13.29 to 0.13.30. Full release notes can be found at https://github.com/apotdevin/thunderhub/releases
+  - Chore: extra error log
+  
+  - Fix: Boltz swap claim transaction fees
+  
+  - Fix: adding safety on object lookups
+  
+  Full release notes can be found at https://github.com/apotdevin/thunderhub/releases/tag/v0.13.30
 submitter: Anthony Potdevin
 submission: https://github.com/getumbrel/umbrel/pull/343
