--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -28,11 +28,11 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  - Chore: extra error log
+  - Chore: Extra error log
   
   - Fix: Boltz swap claim transaction fees
   
-  - Fix: adding safety on object lookups
+  - Fix: Adding safety on object lookups
   
   Full release notes can be found at https://github.com/apotdevin/thunderhub/releases/tag/v0.13.30
 submitter: Anthony Potdevin
