change submiter to Alby

--- a/alby-nostr-wallet-connect/umbrel-app.yml
+++ b/alby-nostr-wallet-connect/umbrel-app.yml
@@ -16,7 +16,7 @@ description: >-
   Damus (currently only on Testflight) video guide: https://streamable.com/bareih
 developer: Alby
 website: http://getalby.com/
-submitter: kiwiidb
+submitter: Alby
 submission: https://github.com/getAlby/nostr-wallet-connect
 repo: https://github.com/getAlby/nostr-wallet-connect
 support: https://github.com/getAlby/nostr-wallet-connect/issues
