--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -24,3 +24,6 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/root/.peerswap
       - ${APP_LIGHTNING_NODE_DATA_DIR}:/root/.lnd:ro
+    networks:
+      default:
+        ipv4_address: $APP_PEERSWAP_IP
